--- a/frontend-guarderia/src/Login.css
+++ b/frontend-guarderia/src/Login.css
@@ -8,24 +8,24 @@ body {
 /* Layout general */
 .login-page {
   display: flex;
-  height: 100vh;
   width: 100%;
+  flex-direction: column;
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
   position: relative;
+  gap: 20px;
+  padding-top: 60px;
 }
 
-/* Logo bien pegado a la esquina izquierda */
-.logo-section {
-  position: absolute;
-  top: 20px;
-  left: 20px;
+.logo-container {
+  text-align: center;
+  margin-bottom: 20px;
   cursor: pointer;
 }
 
 .logo-img {
-  max-width: 150px;
+  max-width: 170px;
   height: auto;
   transition: transform 0.3s ease;
 }
@@ -52,8 +52,9 @@ body {
   color: #0c0c0c;
 }
 
-.login-form input[type="email"],
-.login-form input[type="password"] {
+/* Aplica estilo a todos los inputs, no solo a password/email */
+.login-form input,
+.password-container input {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
@@ -66,18 +67,18 @@ body {
 .login-form button[type="submit"] {
   width: 100%;
   padding: 12px;
-  background-color: #FBF8EF;
+  background-color: #A3D1C6;
   color: rgb(0, 0, 0);
-  border: 1px solid #000000;
-  border-radius: 4px;
+  border: 2px solid #3D8D7A;
+  border-radius: 10px;
   cursor: pointer;
   font-size: 1em;
   transition: border 0.3s ease;
 }
 
 .login-form button[type="submit"]:hover {
-  background-color: #FBF8EF;
-  border: 1px solid #000000;
+  background-color: #3D8D7A;
+  border: 2px solid #A3D1C6;
 }
 
 .login-error {
@@ -99,7 +100,30 @@ body {
   margin-bottom: 8px;
 }
 
-.login-links a:first-child,
-.login-links a:last-child {
-  color: #000000;
+.login-links a:first-child {
+  color: #0866ff;
+}
+
+.login-links a:last-child{
+  color: #386847;
+}
+
+/* Contenedor de la contraseña + botón "ver/ocultar" */
+.password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.password-container input {
+  width: 100%;
+}
+
+.eye-icon{
+  position: absolute;
+  right: 10px;
+  top: 40%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 1rem;
 }
