--- a/frontend-guarderia/src/RegistroCliente.css
+++ b/frontend-guarderia/src/RegistroCliente.css
@@ -74,18 +74,18 @@
 .button {
   padding: 12px;
   font-size: 16px;
-  border: 1px solid #010101;
-  background-color: #FBF8EF;
+  background-color: #A3D1C6;
   color: rgb(0, 0, 0);
-  border-radius: 8px;
+  border: 2px solid #3D8D7A;
+  border-radius: 10px;
   cursor: pointer;
   margin-top: 10px;
   transition: background-color 0.3s;
 }
 
 .button:hover {
-  background-color: #FBF8EF;
-  border: 1px solid #000000;
+  background-color: #3D8D7A;
+  border: 2px solid #A3D1C6;
 }
 
 .message {
